; ModuleID = '/home/carl/AnghaBench/tmux/extr_screen.c_screen_free.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_screen.c_screen_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.screen = type { i32, i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @screen_free(%struct.screen* %0) #0 {
  %2 = alloca %struct.screen*, align 8
  store %struct.screen* %0, %struct.screen** %2, align 8
  %3 = load %struct.screen*, %struct.screen** %2, align 8
  %4 = getelementptr inbounds %struct.screen, %struct.screen* %3, i32 0, i32 4
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @free(i32 %5)
  %7 = load %struct.screen*, %struct.screen** %2, align 8
  %8 = getelementptr inbounds %struct.screen, %struct.screen* %7, i32 0, i32 3
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @free(i32 %9)
  %11 = load %struct.screen*, %struct.screen** %2, align 8
  %12 = getelementptr inbounds %struct.screen, %struct.screen* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @free(i32 %13)
  %15 = load %struct.screen*, %struct.screen** %2, align 8
  %16 = getelementptr inbounds %struct.screen, %struct.screen* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @free(i32 %17)
  %19 = load %struct.screen*, %struct.screen** %2, align 8
  %20 = getelementptr inbounds %struct.screen, %struct.screen* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @grid_destroy(i32 %21)
  %23 = load %struct.screen*, %struct.screen** %2, align 8
  %24 = call i32 @screen_free_titles(%struct.screen* %23)
  ret void
}

declare dso_local i32 @free(i32) #1

declare dso_local i32 @grid_destroy(i32) #1

declare dso_local i32 @screen_free_titles(%struct.screen*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
